static/style.css
body {
    font-family: sans-serif;
    background-color: #F9FAF8;
    margin: 0;
    padding: 0;
}

#main{
    max-width: 100vw;
    max-height: 100vh;
    font-size: max(2vw,2vh);
    background: linear-gradient(#7F00FF,#700070)
}

#nav{
    font-size: max(1vw,1vh);
}

.containerB{
    background: linear-gradient(yellowgreen,yellow);
    display: flex;
    flex-direction: column;
}

.containerC{
    background: url('./media/genrify_background.png');
    display: flex;
    flex-direction: column;
}

.features {
    padding: 10vh 10vw;
    text-align: center;
}

.feature-text {
    color: #1f2937;
    font-size: 24px;
    text-align: center;
}

.cards {
    display: flex;
    flex-wrap: wrap; /* Allows wrapping */
    justify-content: center; /* Center the items horizontally */
    align-items: center; /* Center the items vertically */
    gap: 1rem; /* Space between the items */
    margin: 10vh 0 0 0;
    width: 80vw;
}

/* Individual playlist iframe */
.playlist {
    border-radius: 5px;  
    width: calc(100% / 3 - 1rem); /* 3 items per row minus the gap */
    height: 40vh; /* Height of the iframe */
}

@media (max-width: 768px) {
    #main{
        margin: 0;
        padding: 0;
        width: 100%;
    }
    .playlist {
        width: 70%;
    }
    #genrify{
        display: none;
    }
}

@keyframes buttonAnimation {
    0%, 100% {
        color:#4B0082;
        transform: translateY(0);
        box-shadow: 0 0 0 rgba(0, 0, 0, 0);
    }
    50% {
        color:#4B0082;
        transform: translateY(-10px);
    }
}

.starting-point {
    padding: 5vh;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    font-size: max(2vh,2vw);
}

.starting-button {
    animation: buttonAnimation 3s infinite ease-in-out;
    transition: background-color 0.3s, transform 0.3s;
    position: relative;
    overflow: hidden;
    z-index: 1;
}

.starting-button:hover {
    animation: none;
    transform: translateY(-5px);
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
}



.dashboard {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 2rem;
    width: 100%;
    padding: 17vh 0;
}

.db-button {
    background: rgba(255, 255, 255, 0.1);
    color: #000;
    text-align: center;
    padding: 1rem;
    border-radius: 8px;
    width: 50vw;
    height: 12vh;
    text-decoration: none;
    transition: transform 0.3s, box-shadow 0.3s;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.db-button:hover {
    transform: translateY(-5px);
    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
}

.db-button strong {
    display: block;
    font-size: max(1.8vh,1.8vw);
    margin-bottom: 1rem;
}

.db-button .feature-text {
    font-size: max(1.4vh,1.4vw);
    color: black;
    opacity: 0.5;
}

.social-buttons {
    display: flex;
    justify-content: center;
    gap: 10px;
    margin-top: 50px;
}

.social-button {
    display: inline-block;
    padding: 10px;
    background-color: #000;
    color: white;
    border-radius: 50%;
    text-decoration: none;
    transition: background-color 0.3s ease;
}

.social-button i {
    font-size: 30px;
}

.social-button:hover {
    background-color: #555; 
}

.made-by {
    margin: 30px;
    color: #1f2937;
    font-size: 28px;
    text-align: center;
}


/* Style the link for music preview */
a {
    text-decoration: none;
    font-weight: bold;
}

.analysis-text {
    padding: 100px;
    font-size: 24px;                  
    color: #F9FAF8;                     
    line-height: 1;
    white-space: pre-wrap;     
    text-align: left;
}

